# snackis

./: CMakeLists.txt  README.md  notes.md  snabel.md  todo.org
src/: chan_perf.cpp  gmain.cpp  main.cpp  snabel_tests.cpp  tests.cpp
src/go/: chan_perf  chan_perf.go
src/snabel/: box.cpp  box.hpp  compiler.cpp  compiler.hpp  coro.cpp  coro.hpp  ctx.cpp  ctx.hpp  error.cpp  error.hpp  exec.cpp  exec.hpp  fiber.hpp  func.cpp  func.hpp  label.cpp  label.hpp  op.cpp  op.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  sym.hpp  type.cpp  type.hpp
src/snackis/: #ctx.cpp#  #queue.cpp#  .#ctx.cpp  .#queue.cpp  ctx.cpp  ctx.hpp  db.cpp  db.hpp  feed.cpp  feed.hpp  id_rec.cpp  id_rec.hpp  invite.cpp  invite.hpp  msg.cpp  msg.hpp  peer.cpp  peer.hpp  post.cpp  post.hpp  project.cpp  project.hpp  queue.cpp  queue.hpp  rec.cpp  rec.hpp  script.cpp  script.hpp  setting.cpp  setting.hpp  settings.cpp  settings.hpp  snackis.cpp  snackis.hpp  task.cpp  task.hpp  thread.cpp  thread.hpp
src/snackis/core/: bool_type.cpp  bool_type.hpp  buf.hpp  chan.hpp  data.cpp  data.hpp  data_type.cpp  data_type.hpp  defer.cpp  defer.hpp  diff.hpp  error.cpp  error.hpp  fmt.cpp  fmt.hpp  format.hpp  func.hpp  int64_type.cpp  int64_type.hpp  macros.hpp  mutex.hpp  opt.cpp  opt.hpp  optional.cpp  optional.hpp  path.cpp  path.hpp  prim_type.cpp  prim_type.hpp  proc.cpp  proc.hpp  set_type.hpp  str.cpp  str.hpp  str_type.cpp  str_type.hpp  stream.hpp  string_type.cpp  string_type.hpp  time.cpp  (+16 more)
src/snackis/crypt/: error.cpp  error.hpp  key.cpp  key.hpp  key_type.cpp  key_type.hpp  pub_key.cpp  pub_key.hpp  pub_key_type.cpp  pub_key_type.hpp  secret.cpp  secret.hpp
src/snackis/db/: basic_col.hpp  basic_table.cpp  basic_table.hpp  change.cpp  change.hpp  change_loop.cpp  change_loop.hpp  col.hpp  column.hpp  context.cpp  context.hpp  ctx.cpp  ctx.hpp  error.cpp  error.hpp  index.hpp  key.hpp  loop.cpp  loop.hpp  msg.cpp  msg.hpp  proc.cpp  proc.hpp  rec.hpp  rec_type.hpp  record.hpp  schema.hpp  table.hpp  table_col.hpp  table_column.hpp  table_iter.hpp  trans.cpp  trans.hpp  transaction.cpp  transaction.hpp  write_loop.cpp  write_loop.hpp
src/snackis/gui/: console.cpp  console.hpp  decrypt.cpp  decrypt.hpp  encrypt.cpp  encrypt.hpp  feed_history.cpp  feed_history.hpp  feed_search.cpp  feed_search.hpp  feed_select.cpp  feed_select.hpp  feed_view.cpp  feed_view.hpp  gui.cpp  gui.hpp  inbox.cpp  inbox.hpp  login.cpp  login.hpp  peer_list.cpp  peer_list.hpp  peer_search.cpp  peer_search.hpp  peer_select.cpp  peer_select.hpp  peer_view.cpp  peer_view.hpp  post_search.cpp  post_search.hpp  post_view.cpp  post_view.hpp  project_search.cpp  project_search.hpp  project_select.cpp  project_select.hpp  project_view.cpp  project_view.hpp  queue_list.cpp  queue_list.hpp  (+33 more)
src/snackis/net/: imap.cpp  imap.hpp  imap_worker.cpp  imap_worker.hpp  smtp.cpp  smtp.hpp  smtp_worker.cpp  smtp_worker.hpp  worker.cpp  worker.hpp
src/snackis/ui/: console.cpp  console.hpp  decrypt_form.cpp  decrypt_form.hpp  encrypt_form.cpp  encrypt_form.hpp  enum_field.hpp  field.cpp  field.hpp  file_field.cpp  file_field.hpp  footer.cpp  footer.hpp  form.cpp  form.hpp  header.cpp  header.hpp  inbox_form.cpp  inbox_form.hpp  invite_form.cpp  invite_form.hpp  login_form.cpp  login_form.hpp  peer_panel.cpp  peer_panel.hpp  post_form.cpp  post_form.hpp  profile_form.cpp  profile_form.hpp  reader.cpp  reader.hpp  settings_form.cpp  settings_form.hpp  text_field.cpp  text_field.hpp  ui.cpp  ui.hpp  view.cpp  view.hpp  view_form.cpp  (+3 more)
src/ui/: console.cpp  console.hpp  footer.cpp  footer.hpp  form.cpp  form.hpp  header.cpp  header.hpp  login_form.cpp  login_form.hpp  profile_form.cpp  profile_form.hpp  reader.cpp  reader.hpp  ui.cpp  ui.hpp  view.cpp  view.hpp  view_form.cpp  view_form.hpp  window.cpp  window.hpp
